# fmri-decoder

./: .gitignore  CHANGELOG.md  README.md  TODO.md  config_decoder.yaml  copy_data.sh  pyproject.toml
_rivalry/: cond.ipynb  p1_GE_EPI1_Run1_rivalry_Cond_clean.mat
fmri_decoder/: __init__.py  __main__.py  data.py  model.py  preprocessing.py
scripts/: explore_model.ipynb  show_model.ipynb
tests/: __init__.py  test_data.py  test_model.py
tests/resources/: events.mat
